Complete first pass on User interface updates
May be some missing bits here and there, but it now matches the admin
interface. All Copyright fields are updated and standardized, with
support for localization.

--- a/www/user/htdocs/templates/default/conf_newsletters.tmpl
+++ b/www/user/htdocs/templates/default/conf_newsletters.tmpl
@@ -28,8 +28,12 @@
                     </tr>
                 </table>
             </div>
-            __INCLUDE__(footer.tmpl)
-
+        <div id="pagefoot">
+            <div id="legalpanel">
+                <p id="copyright"><a href="https://__COPYRIGHTLINK__" target="_blank">__COPYRIGHTTEXT__</a></p>
+                __INCLUDE__(company.tmpl)
+            </div>
+        </div>
 
 </body>
 
