--- a/www/user/htdocs/templates/default/header.tmpl
+++ b/www/user/htdocs/templates/default/header.tmpl
@@ -16,7 +16,7 @@
             <li id="mstats"><a href="/stats.php" id="statsbutton" class="menubutton">__LANG_STATISTICSMENU__</a></li>
         </ul>
 
-        <div id="logoutbutton"><a href="__LINK_LOGOUT__">__LANG_LOGOUT__</a></div>
+        <div id="logoutbutton"><a href="__LINK_LOGOUT__"><div id="fullheight">__LANG_LOGOUT__</div></a></div>
         <p id="username">__PRINT_USERNAME__</p>
     </div>
 
