--- a/www/user/htdocs/templates/default/login.tmpl
+++ b/www/user/htdocs/templates/default/login.tmpl
@@ -74,7 +74,7 @@ __FI__ DOMAINCHOOSER -->
         </p>
 
         <div id="loginfooter">
-            <div class="copyright">&copy; <a href="__MCLINK__">__MCLINKLABEL__</a></div>
+            <div class="copyright"><a href="https://__COPYRIGHTLINK__" target="_blank">__COPYRIGHTTEXT__</a></p>
         </div>
 
     </div>
