--- a/www/guis/admin/public/templates/default/css/main.css
+++ b/www/guis/admin/public/templates/default/css/main.css
@@ -128,11 +128,10 @@
 }
 
 #company a, #copyright a {
-    color: #ffffff;
+    color: #FFFFFF;
     line-height: 30px;
     vertical-align: bottom;
     font-size: 14px;
-    color: #ffffff;
 }
 
 #copyright img {
@@ -141,7 +140,6 @@
     vertical-align: bottom;
 }
 
-* internal parts */
 #generalconfigpanel {
     margin: 40px;
     height: 100%;
