--- a/www/user/htdocs/templates/default/css/navigation.css
+++ b/www/user/htdocs/templates/default/css/navigation.css
@@ -2,7 +2,6 @@
 
 /*** https://user.mailcleaner.net/templates/default/css/navigation.css ***/
 
-
 /* "commercial" header */
 #mainheader {
     width: 100%;
@@ -25,13 +24,10 @@
     min-height: 33px;
     margin: 0;
     padding: 0;
-    line-height: 33px;
     background-image:none; 
     background-color: #000000;
     background-repeat: repeat-x;
-    color: #FFFFFF;
     text-indent: 0.5em; 
-    text-align: center;
     white-space: nowrap;
     overflow: hidden;
 }
@@ -45,66 +41,45 @@
 }
 
 /* navigation menu */
-#buttonmenu {
+#buttonmenu, #logoutbutton, #username {
     text-align: center;
     list-style: none; 
     margin: 0; 
     padding: 0;
 }
 
-#buttonmenu li {
+#buttonmenu li, #logoutbutton, #username {
     display: inline;
+    line-height: 33px;
+    font-size: 1.30em;
 }
 
-#buttonmenu li .menubutton {
-    display: inline;
+#buttonmenu li .menubutton, #buttonmenu li .menuselected {
     float: left;
-    background-image:none;
-    width: 100px;
-    line-height: 33px;
-    text-align: center;
-    display: inline;
-    font-size: 1.05em;
+    width: 150px;
     padding:3px;
 }
+
 #buttonmenu li .menuselected {
-    display: inline;
-    float: left;
-    background-image: none !important;
-    background-color: #ED7B00 !important;
-    width: 100px;
-    line-height: 33px;
-    text-align: center;
-    display: inline;
+    background-color: #ED7B00;
 }
 
-#navigation a {
+#navigation a, #logoutbutton a {
     color: white;
     text-decoration: none;
 }
-#navigation a:hover {
-    color: #FF1500;
-    text-decoration: none;
-}
 
-/* username informational field */
-#username {
-    display: inline;
-    margin: 0px;
-    margin-right: 20px;
-    padding: 0px;
+#logoutbutton, #username {
     float: right;
-    line-height: 33px;
     color: #FFFFFF;
 }
 
-/* logout button */
-#logoutbutton {
-    float: right;
-    width: 100px;
-    height: 39px;
+#username, #fullheight {
+    line-height: 37px;
+    height: 37px;
+    padding: 0px 10px;
 }
 
-#logoutbutton:hover {
+#fullheight:hover {
     background-color: #ED7B00;
 }
