--- a/www/user/htdocs/templates/default/quarantine.tmpl
+++ b/www/user/htdocs/templates/default/quarantine.tmpl
@@ -235,7 +235,12 @@
             </div>
 
         </div>
-        __INCLUDE__(footer.tmpl)
+        <div id="pagefoot">
+            <div id="legalpanel">
+                <p id="copyright"><a href="https://__COPYRIGHTLINK__" target="_blank">__COPYRIGHTTEXT__</a></p>
+                __INCLUDE__(company.tmpl)
+            </div>
+        </div>
 
     </div>
 </body>
