--- a/www/user/htdocs/templates/default/stats.tmpl
+++ b/www/user/htdocs/templates/default/stats.tmpl
@@ -184,7 +184,12 @@
             __DISPLAY_GLOBALSTAT__
             &nbsp;
         </div>
-        __INCLUDE__(footer.tmpl)
+        <div id="pagefoot">
+            <div id="legalpanel">
+                <p id="copyright"><a href="https://__COPYRIGHTLINK__" target="_blank">__COPYRIGHTTEXT__</a></p>
+                __INCLUDE__(company.tmpl)
+            </div>
+        </div>
 
     </div>
 </body>
