--- a/www/guis/admin/public/templates/default/css/global.css
+++ b/www/guis/admin/public/templates/default/css/global.css
@@ -99,7 +99,7 @@ textarea {
 }
 
 .globalstatusbloc {
-    min-height: 190px;
+    min-height: 160px;
 }
 
 .globalbloc h1 {
@@ -213,6 +213,14 @@ textarea {
     vertical-align: middle;
 }
 
+.status_critical {
+    color: #FF2F00;
+}
+
+.status_warning a#statuslink_warning {
+    color: #F48C30 !important;
+}
+
 .globalstatustable {
     line-height: 18px;
     margin-top: 10px;
@@ -225,7 +233,16 @@ textarea {
     margin-right: 50px;
 }
 .versionrow {
-    border-bottom: 1px solid #C6ADC6;
+    border-bottom: 1px solid #D4D3D2;
+    display: block;
+    position: relative;
+    text-align: center;
+    padding: 5px;
+    background-color: #D4D3D2;
+}
+
+span.versionrow.registered {
+    background: #AFA;
 }
 
 .registerstatus {
