Misc changes from Olivier Diserens

--- a/www/guis/admin/public/templates/default/scripts/ajax/monitorstatus/hoststatus.phtml
+++ b/www/guis/admin/public/templates/default/scripts/ajax/monitorstatus/hoststatus.phtml
@@ -109,10 +109,16 @@ if (!$this->initial_loading) {
 
 
             <td class="c_memory"><br />
-                <?php $memusage =  round((100 / $status['memoryusage']['memtotal']) * ($status['memoryusage']['memused'] - $status['memoryusage']['memcached'])) ?>
-                <?php if (isset($status['memoryusage']['swaptotal']) && $status['memoryusage']['swaptotal'] != 0) {
+                <?php
+                $memusage = '0.0';
+                if (isset($status['memoryusage']['memtotal']) && $status['memoryusage']['memtotal'] > 0) {
+                    $memusage = sprintf('%.2d', (100 / $status['memoryusage']['memtotal']) * ($status['memoryusage']['memused'] - $status['memoryusage']['memcached']));
+                }
+                $swapusage = '0.0';
+                if (isset($status['memoryusage']['swaptotal']) && $status['memoryusage']['swaptotal'] > 0) {
                     $swapusage =  sprintf('%.2d', (100 / $status['memoryusage']['swaptotal']) * ($status['memoryusage']['swapused']));
-                } ?>
+                }
+                ?>
 
                 <span class='statusdescr'><?php echo $this->t->_('Physical memory') ?>: </span>
                 <span class='statusvalue'><?php echo $memusage . "%" ?></span>
