Remove Kaspersky references

--- a/www/guis/admin/public/templates/default/scripts/forms/commercialOptionsForm.phtml
+++ b/www/guis/admin/public/templates/default/scripts/forms/commercialOptionsForm.phtml
@@ -34,7 +34,7 @@
         <tr>
             <td colspan="2">
                 <ul style="margin-left: 4%; list-style-type: disc;">
-                    <li>Kaspersky</li>
+                    <li>ESET EFS</li>
                     <li>Spamhaus SBL</li>
                     <li>Spamhaus DBL, HBL and ZRD</li>
                     <li>
