--- a/www/guis/admin/public/templates/default/css/main.css
+++ b/www/guis/admin/public/templates/default/css/main.css
@@ -131,7 +131,7 @@
     color: #FFFFFF;
     line-height: 30px;
     vertical-align: bottom;
-    font-size: 14px;
+    font-size: 0.8em;
 }
 
 #copyright img {
