--- a/www/guis/admin/public/templates/default/scripts/layouts/main.phtml
+++ b/www/guis/admin/public/templates/default/scripts/layouts/main.phtml
@@ -8,10 +8,12 @@
  */
 ?>
 <?php echo $this->doctype() ?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en-US">
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link rel='dns-prefetch' href='//fonts.googleapis.com' />
+    <link rel="stylesheet" id='et-gf-opensans-css' href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" type="text/css" />
     <?php echo $this->headTitle() ?>
     <?php echo $this->headLink() ?>
 
@@ -129,6 +131,9 @@
 
     </div>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300:600:700:800" rel="stylesheet">
 </body>
 
 </html>
